--- a/index.html
+++ b/index.html
@@ -21,9 +21,15 @@
             <label for="filmek_szama">Filmek száma/hét: </label>
             <input type="range" id="filmek_szama" name="film_szam"
             oninput="this.form.f_sz.value=this.value" max="20">
-            <input type="number" name="f_sz" size="6" oninput="this.form.film_szam.value=this.value">
+            <input type="number" name="f_sz" oninput="this.form.film_szam.value=this.value">
             <br>
-            <input type="submit" value="Küldés">
+            <label for="utolso">Utolsó mozizás ideje: </label>
+            <input type="date" id="utolso" name="utolso">
+            <br>
+            <div>
+                <input type="submit" value="Küldés">
+            </div>
+            
         </fieldset>
     </form>
 </body>
